# nana

./: .gitignore  AGENT.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  install.sh  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
nana/: __init__.py  __main__.py  cli.py  locale_manager.py  request_handler.py  setup_wizard.py  utils.py
nana/actions/: extractor.py  housekeeping.py  recipe.py  tagger.py  writer.py
src/: cli.py  locale_manager.py  request_handler.py  setup_wizard.py  utils.py
src/actions/: extractor.py  housekeeping.py  recipe.py  tagger.py  writer.py
src/locales/: en.yaml  pl.yaml
tests/: conftest.py  test_housekeeping.py  test_tagger.py  test_writer.py
